Gave messages a bottom margin to avoid hiding behind the send window. Also removed keepalive since we might not need it.

--- a/public/app.css
+++ b/public/app.css
@@ -24,6 +24,10 @@ body {
   font-weight: bold;
 }
 
+#messages { 
+  margin-bottom: 25px;
+}
+
 #name-section {
   margin: 100px auto;
   width: 300px;
